# L23-Lilac

./: .gitignore  .ruff.toml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
lilac/: __init__.py
lilac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lilac/adapters/: __init__.py  base.py  cfnspec.py  yaml_io.py
lilac/adapters/aws/: __init__.py  cloudwatch.py  ec2.py  ecr.py  ecs.py  route53.py  s3.py
lilac/cli/: __init__.py  main.py
lilac/domain/: __init__.py  dependency.py  models.py  plan.py  validation.py
lilac/services/: __init__.py  dependency.py  deployer.py  operations.py  planner.py  scanner.py
lilac/utils/: __init__.py  helpers.py
tests/adapters/: test_base.py  test_cfnspec.py  test_yaml_io.py
tests/adapters/aws/: test_other.py  test_s3.py
tests/cli/: test_main.py
tests/domain/: test_dependency.py  test_models.py  test_plan.py  test_validation.py
tests/services/: test_deployer.py  test_operations.py  test_planner.py  test_scanner.py
tests/utils/: test_helpers.py
