[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lilac"
version = "0.1.0"
description = "Lilac project."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "PyYAML==6.0.2",
    "boto3==1.38.41",
    "click==8.2.1",
    "networkx==3.5",
    "requests==2.32.4",
]

[project.scripts]
lilac = "lilac.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.12.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
